# genetic_algorithm

./: CMakeLists.txt
include/: GACore.hpp  Genome.hpp  MaxFunction.hpp  Population.hpp  utiliy_classes.hpp
src/: GACore.cpp  Genome.cpp  MaxFunction.cpp  Population.cpp  main.cpp
